src/tests/snapshots/cendol__tests__semantic_initializers__array_designator_override.snap
---
source: src/tests/semantic_initializers.rs
expression: mir
---
type %t0 = i32
type %t1 = [3]%t0

global @a: [3]i32 = const array_literal [const zero, const 20, const zero]

fn main() -> i32
{

  bb1:
    return const 0
}
