src/tests/snapshots/cendol__tests__semantic_initializers__array_designator_simple.snap
---
source: src/tests/semantic_initializers.rs
expression: mir
---
type %t0 = i32
type %t1 = [5]%t0

global @a: [5]i32 = const array_literal [const zero, const 10, const zero, const 30, const zero]

fn main() -> i32
{

  bb1:
    return const 0
}
