src/tests/snapshots/cendol__tests__semantic_initializers__array_init_bug_mir.snap
---
source: src/tests/semantic_initializers.rs
expression: mir
---
type %t0 = i32
type %t1 = [4]%t0

global @a: [4]i32 = const array_literal [const 5, const zero, const 2, const 3]

fn main() -> i32
{

  bb1:
    return const 0
}
