src/tests/snapshots/cendol__tests__semantic_initializers__mixed_array_struct_designators.snap
---
source: src/tests/semantic_initializers.rs
expression: mir
---
type %t0 = i32
type %t1 = struct S { arr: %t2, val: %t0 }
type %t2 = [3]%t0

global @s: %t1 = const struct_literal { 1: const 99, 0: const array_literal [const zero, const 10, const zero] }

fn main() -> i32
{

  bb1:
    return const 0
}
