src/tests/snapshots/cendol__tests__semantic_initializers__scalar_braced_init.snap
---
source: src/tests/semantic_initializers.rs
assertion_line: 95
expression: mir
---
type %t0 = i32

global @a: i32 = const 1
global @c: i32 = const zero

fn main() -> i32
{

  bb1:
    return const 0
}
