src/tests/snapshots/cendol__tests__semantic_initializers__struct_designator_simple.snap
---
source: src/tests/semantic_initializers.rs
expression: mir
---
type %t0 = i32
type %t1 = struct S { x: %t0, y: %t0 }

global @s: %t1 = const struct_literal { 1: const 2, 0: const 1 }

fn main() -> i32
{

  bb1:
    return const 0
}
